--- a/lab2/config/postgresql.conf
+++ b/lab2/config/postgresql.conf
@@ -443,7 +443,7 @@ log_destination = 'syslog'
 					# (change requires restart)
 
 # These are only used if logging_collector is on:
-#log_directory = 'log'			# directory where log files are written,
+log_directory = 'log'			# directory where log files are written,
 					# can be absolute or relative to PGDATA
 #log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'	# log file name pattern,
 					# can include strftime() escapes
@@ -809,6 +809,7 @@ effective_cache_size = 4GB
 fsync = on
 commit_delay = 1000
 wal_level = replica
+logging_collector = on
 log_directory = 'logs'
 log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'
 log_min_messages = ERROR
