--- a/lab3/uzel_1/config/postgresql.conf
+++ b/lab3/uzel_1/config/postgresql.conf
@@ -64,7 +64,7 @@
 #port = 5432				# (change requires restart)
 #max_connections = 100			# (change requires restart)
 #superuser_reserved_connections = 3	# (change requires restart)
-#unix_socket_directories = '/tmp'	# comma-separated list of directories
+unix_socket_directories = '/tmp'	# comma-separated list of directories
 					# (change requires restart)
 #unix_socket_group = ''			# (change requires restart)
 #unix_socket_permissions = 0777		# begin with 0 to use octal notation
@@ -799,7 +799,6 @@ default_text_search_config = 'pg_catalog.russian'
 # Add settings for extensions here
 listen_addresses = '*'
 port = 9143
-unix_socket_directories = ''
 max_connections = 10
 shared_buffers = 2GB
 temp_buffers = 32MB
