--- a/lab3/uzel_1/config/postgresql.conf
+++ b/lab3/uzel_1/config/postgresql.conf
@@ -430,7 +430,7 @@ min_wal_size = 80MB
 
 # - Where to Log -
 
-log_destination = 'syslog'
+log_destination = 'stderr'
 #log_destination = 'stderr'		# Valid values are combinations of
 					# stderr, csvlog, syslog, and eventlog,
 					# depending on platform.  csvlog
@@ -800,7 +800,7 @@ default_text_search_config = 'pg_catalog.russian'
 listen_addresses = '*'
 port = 9143
 max_connections = 10
-shared_buffers = 2GB
+shared_buffers = 512MB
 temp_buffers = 32MB
 work_mem = 16MB
 checkpoint_timeout = 15min
